...
		                                 email: "example@example.com",
		                                 username: "Example",
		                                 extra: ["is_admin": false]
		)
		// A map or list of tags for this event.
		SentryClient.shared?.tags = [
			"environment": "production"
		]
		// An arbitrary mapping of additional metadata to store with the event
		SentryClient.shared?.extra = [
			"a_thing": 3,
			"some_things": ["green", "red"],
			"foobar": ["foo": "bar"]
...
