...
                                                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="g56-6u-NUj">
                                                            <rect key="frame" x="251" y="110" width="95" height="24"/>
                                                            <buttonCell key="cell" type="push" title="Stop profile" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="evk-pj-UmW">
                                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility identifier="io.sentry.ios-swift.ui-test.button.stop-continuous-profiler"/>
                                                            <connections>
                                                                <action selector="stopProfile:" target="XfG-lQ-9wD" id="5HW-xf-UT9"/>
                                                            </connections>
                                                        </button>
                                                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="EdV-Vd-yEu">
                                                            <rect key="frame" x="207" y="76" width="184" height="24"/>
                                                            <buttonCell key="cell" type="push" title="Retrieve first profile chunk" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="HoB-7N-rWx">
                                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility identifier="io.sentry.ui-tests.view-first-continuous-profile-chunk"/>
                                                            <connections>
                                                                <action selector="retrieveProfileChunk:" target="XfG-lQ-9wD" id="EnS-7z-0xG"/>
                                                            </connections>
                                                        </button>
                                                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ZGZ-qX-cMW">
                                                            <rect key="frame" x="160" y="42" width="277" height="24"/>
                                                            <buttonCell key="cell" type="push" title="Check launch profile marker file existence" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="md6-9l-rUp">
                                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                                                <font key="font" metaFont="system"/>
                                                            </buttonCell>
                                                            <accessibility identifier="io.sentry.ui-tests.app-launch-profile-marker-file-button"/>
                                                            <connections>
                                                                <action selector="checkProfileMarkerFileExistence:" target="XfG-lQ-9wD" id="Fve-Lw-Dza"/>
                                                            </connections>
                                                        </button>
                                                        <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="owK-2t-dc9">
                                                            <rect key="frame" x="251" y="8" width="96" height="24"/>
                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="sTe-36-0Dx">
                                                                <font key="font" usesAppearanceFont="YES"/>
                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                            </textFieldCell>
                                                            <accessibility identifier="io.sentry.ui-tests.profile-marshaling-text-field"/>
                                                        </textField>
                                                    </subviews>
                                                    <visibilityPriorities>
                                                        <integer value="1000"/>
                                                        <integer value="1000"/>
                                                        <integer value="1000"/>
...
